--- a/Calculator/en.lproj/MainStoryboard.storyboard
+++ b/Calculator/en.lproj/MainStoryboard.storyboard
@@ -505,8 +505,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="descriptionOfProgram" destination="9ZT-Qa-Nq1" id="NAF-6e-Zwe"/>
                         <outlet property="display" destination="Cf9-LF-BrA" id="t0v-Mw-46o"/>
-                        <outlet property="history" destination="9ZT-Qa-Nq1" id="Fy0-Pt-YPN"/>
                         <outlet property="variablesUsedInProgram" destination="6f9-9e-oBY" id="qbP-Zx-JU7"/>
                     </connections>
                 </viewController>
@@ -514,19 +514,6 @@
             <point key="canvasLocation" x="-32" y="87"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="CalculatorViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CalculatorViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="digitPressed:" candidateClass="UIButton"/>
-                <relationship kind="action" name="operationPressed:" candidateClass="UIButton"/>
-                <relationship kind="action" name="testSetPressed:" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="display" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="history" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="variablesUsedInProgram" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
